# aws-checks

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/common/: credentials.rs  mod.rs
src/services/: ec2.rs  iam.rs  mod.rs  s3.rs  sts.rs
src/services/s3/: mod.rs
src/utils/: credentials.rs
