[package]
name = "rust-aws-security-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-http = "0.37.0"
aws-smithy-types = "0.37.0"
aws-config = "0.7.0"
aws-types = "0.7.0"
aws-sdk-s3 = "0.7.0"
aws-sdk-iam = "0.7.0"
cached = "0.30.0"
clap = { version = "3.0.14", features = ["derive"] }
tokio = { version = "1", features = ["full"] }